@@ -113,44 +113,6 @@ let SELECT_UNIQUE = prove
 extend_basic_rewrites [SELECT_REFL];;
 
 (* ------------------------------------------------------------------------- *)
-(* Derived principles of definition based on existence.                      *)
-(* ------------------------------------------------------------------------- *)
-
-let the_specifications = ref [];;
-
-let new_specification =
-  let SEL_RULE =
-    CONV_RULE (RATOR_CONV (REWR_CONV EXISTS_THM) THENC BETA_CONV) in
-  let check_distinct l =
-    try itlist (fun t res -> if mem t res then fail() else t::res) l []; true
-    with Failure _ -> false in
-  let specify name th =
-    let th1 = SEL_RULE th in
-    let l,r = dest_comb(concl th1) in
-    let ty = type_of r in
-    let th2 = new_definition(mk_eq(mk_var(name,ty),r)) in
-    CONV_RULE BETA_CONV (EQ_MP (AP_TERM l (SYM th2)) th1) in
-  fun names th ->
-    let asl,c = dest_thm th in
-    if not (asl = []) then
-      failwith "new_specification: Assumptions not allowed in theorem" else
-    if not (frees c = []) then
-      failwith "new_specification: Free variables in predicate" else
-    let avs = fst(strip_exists c) in
-    if length names = 0 or length names > length avs then
-      failwith "new_specification: Unsuitable number of constant names" else
-    if not (check_distinct names) then
-      failwith "new_specification: Constant names not distinct"
-    else
-      try let sth = snd(find (fun ((names',th'),sth') ->
-                               names' = names & aconv (concl th') (concl th))
-                             (!the_specifications)) in
-          warn true ("Benign respecification"); sth
-      with Failure _ ->
-          let sth = rev_itlist specify names th in
-          the_specifications := ((names,th),sth)::(!the_specifications); sth;;
-
-(* ------------------------------------------------------------------------- *)
 (* Now we can derive type definitions from existence; check benignity.       *)
 (* ------------------------------------------------------------------------- *)
 
